--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "firebase": "^9.16.0",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.1",
     "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
@@ -28,7 +29,6 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
-    "tailwindcss-animate": "^1.0.5",
     "vite": "^4.0.0"
   }
 }
