--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
-    "sweetalert2": "^11.7.1",
-    "tw-elements": "^1.0.0-alpha13"
+    "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
